--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 
 
 before_install:
-  - docker build -t lokesh2yss/docker-react -f Dockerfile.dev
+  - docker build -t lokesh2yss/docker-react -f Dockerfile.dev .
 
 script:
   - docker run lokesh2yss/docker-react npm run test -- --coverage
