--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - docker build -t lokesh2yss/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run lokesh2yss/docker-react npm run test -- --coverage
+  - docker run -e CI=true lokesh2yss/docker-react npm run test
 
